Fixed a bug so that when an operator is connected to a dialog, a message is displayed with the operator's name in square brackets

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -51,6 +51,7 @@
         app:show_internet_connection_state="false"
         app:show_chat_state="false"
         app:show_upper_limiter="false"
+        app:reply_enable="true"
         app:timeDelayed="1000" />
 
 </LinearLayout>
