--- a/chat/src/main/res/layout/com_crafttalk_chat_item_user_union_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_user_union_message.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:autoLink="email"
+        android:autoLink="email|web"
         android:fontFamily="@font/com_crafttalk_chat_ubuntu_light"
         android:textFontWeight="300"
         android:paddingEnd="@dimen/com_crafttalk_chat_message_content_padding_end"
