--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -180,6 +180,13 @@
         <attr name="size_feedback_title" format="dimension"/>
         <attr name="color_feedback_star" format="color"/>
 
+        <!--voice input-->
+        <attr name="show_voice_input" format="boolean"/>
+        <attr name="delay_voice_input_post_recording" format="integer"/>
+        <attr name="delay_voice_input_between_recurring_warnings" format="integer"/>
+        <attr name="drawable_voice_input_mic_on" format="reference"/>
+        <attr name="drawable_voice_input_mic_off" format="reference"/>
+
         <!--warning-->
         <attr name="title_success_download_file_warning" format="string"/>
         <attr name="color_success_download_file_warning" format="color"/>
