--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -173,6 +173,7 @@
         <attr name="layout_item_operator_file_message" format="reference"/>
         <attr name="layout_item_operator_union_message" format="reference"/>
         <attr name="layout_item_transfer_message" format="reference"/>
+        <attr name="layout_item_info_message" format="reference"/>
 
         <!--feedback-->
         <attr name="delay_feedback_screen_appears" format="integer"/>
