--- a/chat/src/main/res/layout/com_crafttalk_chat_item_info_message.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_item_info_message.xml
@@ -4,21 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/com_crafttalk_chat_message_margin_start"
-    android:layout_marginTop="@dimen/com_crafttalk_chat_message_margin_top"
-    android:layout_marginEnd="@dimen/com_crafttalk_chat_message_margin_end"
-    android:layout_marginBottom="@dimen/com_crafttalk_chat_message_margin_bottom">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/info_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:paddingStart="16dp"
-        android:paddingTop="12dp"
-        android:paddingEnd="12dp"
-        android:paddingBottom="12dp"
+        android:paddingStart="36dp"
+        android:paddingTop="22dp"
+        android:paddingEnd="36dp"
+        android:paddingBottom="22dp"
         android:fontFamily="@font/com_crafttalk_chat_ubuntu_regular"
         android:textFontWeight="600"
         app:layout_constraintStart_toStartOf="parent"
