--- a/chat/src/main/res/values/dimens.xml
+++ b/chat/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="com_crafttalk_chat_default_size_user_replied_message">14sp</dimen>
     <dimen name="com_crafttalk_chat_default_size_server_message">14sp</dimen>
     <dimen name="com_crafttalk_chat_default_size_server_action">14sp</dimen>
+    <dimen name="com_crafttalk_chat_default_size_server_button">14sp</dimen>
     <dimen name="com_crafttalk_chat_default_size_author">12sp</dimen>
     <dimen name="com_crafttalk_chat_default_size_author_preview">24dp</dimen>
     <dimen name="com_crafttalk_chat_default_size_time">12sp</dimen>
@@ -16,6 +17,9 @@
     <dimen name="com_crafttalk_chat_default_size_download">14sp</dimen>
     <dimen name="com_crafttalk_chat_default_size_info">12sp</dimen>
     <dimen name="com_crafttalk_chat_default_size_feedback_title">16sp</dimen>
+
+    <dimen name="com_crafttalk_chat_horizontal_spacing_operator_button">4dp</dimen>
+    <dimen name="com_crafttalk_chat_vertical_spacing_operator_button">4dp</dimen>
 
     <dimen name="com_crafttalk_chat_default_margin_start_media_file">14dp</dimen>
     <dimen name="com_crafttalk_chat_default_margin_end_media_file">12dp</dimen>
