--- a/chat/src/main/res/layout/com_crafttalk_chat_include_search.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_include_search.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:paddingTop="8dp"
+    android:paddingStart="8dp"
+    android:paddingBottom="8dp">
 
     <EditText
         android:id="@+id/search_input"
@@ -29,6 +31,8 @@
         android:text="@string/com_crafttalk_chat_search_cancel"
         android:textColor="@color/com_crafttalk_chat_blue_005cb2"
         android:paddingStart="16dp"
+        android:paddingEnd="8dp"
+        android:paddingVertical="8dp"
         app:layout_constraintTop_toTopOf="@id/search_input"
         app:layout_constraintBottom_toBottomOf="@id/search_input"
         app:layout_constraintEnd_toEndOf="parent" />
