--- a/chat/src/main/res/layout/com_crafttalk_chat_include_search_switch.xml
+++ b/chat/src/main/res/layout/com_crafttalk_chat_include_search_switch.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="8dp">
 
     <TextView
         android:id="@+id/search_coincidence"
